--- a/am2dsp.cfg
+++ b/am2dsp.cfg
@@ -1,5 +1,40 @@
 exclude_dir = threads
+
 include_path = .
 include_path = ..
 include_path = .\SimGear
 #include_path = \usr\include
+
+define = HAVE_CONFIG_H
+
+#add_project = .\SimGear\simgear\metakit\win\msvc60\mklib.dsp
+
+# Rule to create simgear_config.h
+add_source_file = \
+# Begin Source File\
+\
+SOURCE = .\simgear\simgear_config.h.vc5\
+\
+!IF  "$(CFG)" == "FlightGear - Win32 Release"\
+\
+# Begin Custom Build - Creating config.h\
+InputPath=.\simgear\simgear_config.h.vc5\
+\
+".\simgear\simgear_config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+        copy .\simgear\simgear_config.h.vc5 .\simgear\simgear_config.h\
+\
+# End Custom Build\
+\
+!ELSEIF  "$(CFG)" == "FlightGear - Win32 Debug"\
+\
+# Begin Custom Build - Creating config.h\
+InputPath=.\simgear\simgear_config.h.vc5\
+\
+".\simgear\simgear_config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+        copy .\simgear\simgear_config.h.vc5 .\simgear\simgear_config.h\
+\
+# End Custom Build\
+\
+!ENDIF\
+\
+# End Source File
