Oops, missing a trainling backslash after exception.hxx

--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -10,7 +10,7 @@ lib_LIBRARIES = libsgmisc.a
 
 include_HEADERS = \
         commands.hxx \
-        exception.hxx
+        exception.hxx \
 	props.hxx \
 	sg_path.hxx \
 	sgstream.hxx \
