--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -20,7 +20,11 @@ libsgio_a_SOURCES = \
 	sg_socket.cxx \
 	sg_socket_udp.cxx 
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
 
 noinst_PROGRAMS = decode_binobj socktest lowtest
 
