--- a/simgear/serial/Makefile.am
+++ b/simgear/serial/Makefile.am
@@ -14,4 +14,8 @@ testserial_LDADD = \
 	$(top_builddir)/simgear/serial/libsgserial.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
