--- a/simgear/threads/Makefile.am
+++ b/simgear/threads/Makefile.am
@@ -10,4 +10,8 @@ include_HEADERS = \
 libsgthreads_a_SOURCES = \
 	SGThread.cxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
