--- a/simgear/debug/Makefile.am
+++ b/simgear/debug/Makefile.am
@@ -8,4 +8,8 @@ include_HEADERS = debug_types.h logstream.hxx
 
 libsgdebug_a_SOURCES = logstream.cxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
