--- a/simgear/ephemeris/Makefile.am
+++ b/simgear/ephemeris/Makefile.am
@@ -31,4 +31,8 @@ libsgephem_a_SOURCES = \
 	uranus.cxx \
 	venus.cxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
