--- a/simgear/math/Makefile.am
+++ b/simgear/math/Makefile.am
@@ -30,4 +30,8 @@ libsgmath_a_SOURCES = \
 	sg_random.c \
 	vector.cxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) $(ZLIB_INCL)
+else
+INCLUDES = -I$(top_srcdir) $(ZLIB_INCL)
+endif
