--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -35,4 +35,8 @@ noinst_PROGRAMS = props_test
 props_test_SOURCES = props_test.cxx
 props_test_LDADD = libsgmisc.a ../xml/libsgxml.a ../debug/libsgdebug.a
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) $(ZLIB_INCL)
+else
+INCLUDES = -I$(top_srcdir) $(ZLIB_INCL)
+endif
