--- a/simgear/sky/Makefile.am
+++ b/simgear/sky/Makefile.am
@@ -20,4 +20,8 @@ libsgsky_a_SOURCES = \
 	sphere.cxx \
 	stars.cxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
