--- a/simgear/timing/Makefile.am
+++ b/simgear/timing/Makefile.am
@@ -16,4 +16,8 @@ libsgtiming_a_SOURCES = \
 	timestamp.cxx \
 	timezone.cxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
