--- a/simgear/xgl/Makefile.am
+++ b/simgear/xgl/Makefile.am
@@ -6,4 +6,8 @@ include_HEADERS = xgl.h
 
 libsgxgl_a_SOURCES = xgl.c xglUtils.c
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir)
+else
+INCLUDES = -I$(top_srcdir)
+endif
