Removed metakit and zlib from the configure/build process.  The developer will need to build and install these separately if they don't have packages already installed by their system.  See README.metakit and README.zlib for more details.
As a convenience, pristine tarballs of the metakit and zlib source code
trees are included with the simgear distribution (and cvs.)

--- a/simgear/math/Makefile.am
+++ b/simgear/math/Makefile.am
@@ -1,11 +1,5 @@
 includedir = @includedir@/math
 
-if HAVE_ZLIB
-ZLIB_INCL =
-else
-ZLIB_INCL = -I$(top_srcdir)/src/zlib
-endif
-
 lib_LIBRARIES = libsgmath.a
 
 include_HEADERS = \
@@ -31,7 +25,7 @@ libsgmath_a_SOURCES = \
 	vector.cxx
 
 if OLD_AUTOMAKE
-INCLUDES += -I$(top_srcdir) $(ZLIB_INCL)
+INCLUDES += -I$(top_srcdir)
 else
-INCLUDES = -I$(top_srcdir) $(ZLIB_INCL)
+INCLUDES = -I$(top_srcdir)
 endif
