--- a/configure.in
+++ b/configure.in
@@ -34,6 +34,11 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_PROG_LN_S
 
+# Check to see if this `configure' is being run in the `Cygwin32' environment
+AC_CYGWIN
+AC_MINGW32
+AC_EXEEXT
+
 AR="ar"
 OS=`uname -s`
 if test "$OS" = "IRIX" -o "$OS" = "IRIX64"; then
@@ -86,7 +91,6 @@ if test "x$HOSTTYPE" != "xmacintosh" ; then
         if test -d /usr/mingw/usr ; then
             EXTRA_DIRS="$EXTRA_DIRS /usr/mingw/usr"
         fi
-        EXTRA_DIRS="${EXTRA_DIRS} `pwd`/Win32"
     fi
 fi
 
@@ -113,6 +117,10 @@ dnl Checks for libraries.
 null_LIBS="$LIBS"
 
 AC_CHECK_LIB(m, cos)
+
+if test  "x$ac_cv_mingw32" = "xyes" ; then
+    LIBS="$LIBS -lwsock32"
+fi
 
 base_LIBS="$LIBS"
 
@@ -209,6 +217,9 @@ else
 
     LIBS="$LIBS -l${WIN32_GLUT} -l${WIN32_GLU} -l${WIN32_OPENGL}"
     LIBS="$LIBS -luser32 -lgdi32"
+    if test  "x$ac_cv_mingw32" = "xyes" ; then
+	LIBS="$LIBS -wsock32"
+    fi
     echo "Will link apps with $LIBS"
 fi
 
