--- a/configure.in
+++ b/configure.in
@@ -103,8 +103,8 @@ AC_EGREP_CPP(yes,
  #endif
 ],is_mingw=yes, is_mingw=no)
 
-echo "IS_MINGW = "$is_mingw
-AM_CONDITIONAL(IS_MINGW, test $is_mingw="yes")
+echo "IS_MINGW =" $is_mingw
+AM_CONDITIONAL(IS_MINGW, test "x$is_mingw" = "xyes")
 
 AC_EGREP_CPP(yes,
 [#ifdef __CYGWIN__
@@ -112,8 +112,8 @@ AC_EGREP_CPP(yes,
  #endif
 ],is_cygwin=yes, is_cygwin=no)
 
-echo "IS_CYGWIN = "$is_cygwin
-AM_CONDITIONAL(IS_CYGWIN, test $is_cygwin="yes")
+echo "IS_CYGWIN =" $is_cygwin
+AM_CONDITIONAL(IS_CYGWIN, test "x$is_cygwin" = "xyes")
 
 if test "x$HOSTTYPE" != "xmacintosh" -a "x$is_mingw" != "xyes"; then
     dnl extra library and include directories
