--- a/configure.in
+++ b/configure.in
@@ -198,8 +198,8 @@ elif test "x$ac_cv_header_windows_h" != "xyes" ; then
 
     dnl if using mesa, check for xmesa.h
     if test "x$ac_cv_lib_MesaGL_glNewList" = "xyes" ; then
-	AC_CHECK_HEADER(GL/xmesa.h)
-	if test "x$ac_cv_header_GL_xmesa_h" = "xyes"; then
+	AC_CHECK_HEADER(GL/fxmesa.h)
+	if test "x$ac_cv_header_GL_fxmesa_h" = "xyes"; then
 	    AC_DEFINE( XMESA )
             AC_DEFINE( FX )
         fi
