--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@ AC_INIT(simgear/bucket/newbucket.cxx)
 AC_PREREQ(2.13)
 
 dnl Initialize the automake stuff
-AM_INIT_AUTOMAKE(SimGear, 0.0.17)
+AM_INIT_AUTOMAKE(SimGear, 0.0.17pre2)
 
 dnl Specify KAI C++ compiler and flags.
 dnl Borrowed with slight modification from blitz distribution.
