Patches from Tony Peden to separate property XML I/O operations into a separate header file.  This change will help integrate properties into JSBSim.

--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -6,6 +6,7 @@ include_HEADERS = \
         commands.hxx \
         exception.hxx \
 	props.hxx \
+  props_io.hxx \
 	sg_path.hxx \
 	sgstream.hxx \
 	stopwatch.hxx \
