Added src-libs subdirectory for keeping source code to extra libs.  These are things that are needed, but that many systems already have packages available to install, and many users may have versions of these already installed to support other projects.  So rather than build and install by default with the main SimGear build/install, these are kept separate so that those users that don't have them already installed can build and install them separately.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,11 +5,9 @@ EXTRA_DIST = \
 	README.metakit \
 	README.zlib \
 	SimGear.dsp \
-	SimGear.dsw \
-	metakit-2.4.2-32.tar.gz \
-	zlib-1.1.4.tar.gz
+	SimGear.dsw
 
-SUBDIRS	= simgear
+SUBDIRS	= src-libs simgear
 
 #
 # Rule to build RPM distribution package
