Updated am2dsp.cfg file for creating MSVC project files. New README.MSVC. New src-libs/zlib.dsp for building zlib.

--- a/am2dsp.cfg
+++ b/am2dsp.cfg
@@ -1,40 +1,39 @@
+type = StaticLibrary,Multithreaded,
 exclude_dir = threads
 
 include_path = .
 include_path = ..
 include_path = .\SimGear
-#include_path = \usr\include
+include_path = .\SimGear\metakit-2.4.3\include
+include_path = ..\SimGear\zlib-1.1.4
 
 define = HAVE_CONFIG_H
 
-#add_project = .\SimGear\simgear\metakit\win\msvc60\mklib.dsp
+add_project = .\SimGear\metakit-2.4.3\win\msvc60\mklib.dsp,mklib
+add_project = .\SimGear\zlib.dsp,zlib
 
 # Rule to create simgear_config.h
-add_source_file = \
-# Begin Source File\
+add_source_file = SOURCE=.\simgear\simgear_config.h.vc5\
 \
-SOURCE = .\simgear\simgear_config.h.vc5\
-\
-!IF  "$(CFG)" == "FlightGear - Win32 Release"\
+!IF  "$(CFG)" == "SimGear - Win32 Release"\
 \
 # Begin Custom Build - Creating config.h\
 InputPath=.\simgear\simgear_config.h.vc5\
 \
-".\simgear\simgear_config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+".\simgear\simgear_config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
         copy .\simgear\simgear_config.h.vc5 .\simgear\simgear_config.h\
 \
 # End Custom Build\
 \
-!ELSEIF  "$(CFG)" == "FlightGear - Win32 Debug"\
+!ELSEIF  "$(CFG)" == "SimGear - Win32 Debug"\
 \
 # Begin Custom Build - Creating config.h\
 InputPath=.\simgear\simgear_config.h.vc5\
 \
-".\simgear\simgear_config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+".\simgear\simgear_config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
         copy .\simgear\simgear_config.h.vc5 .\simgear\simgear_config.h\
 \
 # End Custom Build\
 \
 !ENDIF\
-\
-# End Source File
+
