Updated MSVC project files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,9 @@ EXTRA_DIST = \
 
 SUBDIRS	= src-libs simgear
 
+dist-hook:
+	(cd $(top_srcdir); $(HOME)/projects/FlightGear-0.7/admin/am2dsp.pl)
+
 #
 # Rule to build RPM distribution package
 #
