--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -32,7 +32,21 @@ else
 NETWORK_LIB =
 endif
 
-noinst_PROGRAMS = decode_binobj socktest lowtest
+noinst_PROGRAMS = decode_binobj socktest lowtest tcp_server tcp_client
+
+tcp_server_SOURCES = tcp_server.cxx
+
+tcp_server_LDADD = \
+	$(top_builddir)/simgear/io/libsgio.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	-lplibnet
+
+tcp_client_SOURCES = tcp_client.cxx
+
+tcp_client_LDADD = \
+	$(top_builddir)/simgear/io/libsgio.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	-lplibnet
 
 socktest_SOURCES = socktest.cxx
 
@@ -42,7 +56,7 @@ socktest_LDADD = \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	$(top_builddir)/simgear/xml/libsgxml.a \
-	-lz
+	-lplibnet -lz
 
 lowtest_SOURCES = lowtest.cxx
 
