Added JavaScript interpreter, repackaged by Tony Peden.  It's not tied into anything yet, but it builds OK inside SimGear.

--- a/configure.in
+++ b/configure.in
@@ -343,6 +343,7 @@ AC_OUTPUT( \
 	simgear/bucket/Makefile \
 	simgear/debug/Makefile \
 	simgear/ephemeris/Makefile \
+	simgear/interpreter/Makefile \
 	simgear/io/Makefile \
 	simgear/magvar/Makefile \
 	simgear/math/Makefile \
